Updated doc release: dev

--- a/dev/api/hyperspy.tests.component.html
+++ b/dev/api/hyperspy.tests.component.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
@@ -8,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>component Package &mdash; Hyperspy 0.6+dev documentation</title>
+    <title>hyperspy.tests.component package &mdash; Hyperspy 0.6+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -66,10 +64,13 @@
         <div class="bodywrapper">
           <div class="body">
             
-  <div class="section" id="component-package">
-<h1>component Package<a class="headerlink" href="#component-package" title="Permalink to this headline">¶</a></h1>
+  <div class="section" id="hyperspy-tests-component-package">
+<h1>hyperspy.tests.component package<a class="headerlink" href="#hyperspy-tests-component-package" title="Permalink to this headline">¶</a></h1>
+<div class="section" id="submodules">
+<h2>Submodules<a class="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
+</div>
 <div class="section" id="module-hyperspy.tests.component.test_component_set_parameters">
-<span id="test-component-set-parameters-module"></span><h2><tt class="xref py py-mod docutils literal"><span class="pre">test_component_set_parameters</span></tt> Module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_set_parameters" title="Permalink to this headline">¶</a></h2>
+<span id="hyperspy-tests-component-test-component-set-parameters-module"></span><h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_set_parameters" title="Permalink to this headline">¶</a></h2>
 <dl class="class">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters">
 <em class="property">class </em><tt class="descclassname">hyperspy.tests.component.test_component_set_parameters.</tt><tt class="descname">TestSetParameters</tt><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters" title="Permalink to this definition">¶</a></dt>
@@ -125,6 +126,9 @@
 </dd></dl>
 
 </div>
+<div class="section" id="module-hyperspy.tests.component">
+<span id="module-contents"></span><h2>Module contents<a class="headerlink" href="#module-hyperspy.tests.component" title="Permalink to this headline">¶</a></h2>
+</div>
 </div>
 
 
@@ -138,10 +142,12 @@
             </a></p>
   <h3><a href="../index.html">Table Of Contents</a></h3>
   <ul>
-<li><a class="reference internal" href="#">component Package</a><ul>
-<li><a class="reference internal" href="#module-hyperspy.tests.component.test_component_set_parameters"><tt class="docutils literal"><span class="pre">test_component_set_parameters</span></tt> Module</a><ul>
+<li><a class="reference internal" href="#">hyperspy.tests.component package</a><ul>
+<li><a class="reference internal" href="#submodules">Submodules</a></li>
+<li><a class="reference internal" href="#module-hyperspy.tests.component.test_component_set_parameters">hyperspy.tests.component.test_component_set_parameters module</a><ul>
 </ul>
 </li>
+<li><a class="reference internal" href="#module-hyperspy.tests.component">Module contents</a></li>
 </ul>
 </li>
 </ul>
@@ -185,7 +191,7 @@
     </div>
     <div class="footer">
         &copy; Copyright 2012, The Hyperspy development team.
-      Created using <a href="http://sphinx.pocoo.org/">Sphinx</a> 1.1.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2b2.
     </div>
   </body>
 </html>
