--- a/dev/api/hyperspy.tests.component.html
+++ b/dev/api/hyperspy.tests.component.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>hyperspy.tests.component package &mdash; HyperSpy 0.6+dev documentation</title>
+    <title>hyperspy.tests.component package &mdash; HyperSpy 0.7 documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.6+dev',
+        VERSION:     '0.7',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../_static/doctools.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.6+dev documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.7 documentation" href="../index.html" />
  
 <script type="text/javascript">
 
@@ -55,7 +55,7 @@
         <li class="right" >
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.7 documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -186,7 +186,7 @@
         <li class="right" >
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.6+dev documentation</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.7 documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
