--- a/dev/api/hyperspy.tests.component.html
+++ b/dev/api/hyperspy.tests.component.html
@@ -6,7 +6,7 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>hyperspy.tests.component package &mdash; HyperSpy 0.7.3 documentation</title>
+    <title>hyperspy.tests.component package &mdash; HyperSpy 0.8+dev documentation</title>
     
     <link rel="stylesheet" href="../_static/default.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
@@ -14,7 +14,7 @@
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.7.3',
+        VERSION:     '0.8+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.7.3 documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.8+dev documentation" href="../index.html" />
  
 <script type="text/javascript">
 
@@ -56,7 +56,7 @@
         <li class="right" >
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7.3 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -69,6 +69,47 @@
 <h1>hyperspy.tests.component package<a class="headerlink" href="#hyperspy-tests-component-package" title="Permalink to this headline">¶</a></h1>
 <div class="section" id="submodules">
 <h2>Submodules<a class="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
+</div>
+<div class="section" id="module-hyperspy.tests.component.test_component_active_array">
+<span id="hyperspy-tests-component-test-component-active-array-module"></span><h2>hyperspy.tests.component.test_component_active_array module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_active_array" title="Permalink to this headline">¶</a></h2>
+<dl class="class">
+<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals">
+<em class="property">class </em><tt class="descclassname">hyperspy.tests.component.test_component_active_array.</tt><tt class="descname">TestParametersAsSignals</tt><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals" title="Permalink to this definition">¶</a></dt>
+<dd><p class="rubric">Methods</p>
+<table border="1" class="longtable docutils">
+<colgroup>
+<col width="10%" />
+<col width="90%" />
+</colgroup>
+<tbody valign="top">
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp"><tt class="xref py py-obj docutils literal"><span class="pre">setUp</span></tt></a>()</td>
+<td></td>
+</tr>
+<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active"><tt class="xref py py-obj docutils literal"><span class="pre">test_always_active</span></tt></a>()</td>
+<td></td>
+</tr>
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive"><tt class="xref py py-obj docutils literal"><span class="pre">test_some_inactive</span></tt></a>()</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+<dl class="method">
+<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp">
+<tt class="descname">setUp</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="Permalink to this definition">¶</a></dt>
+<dd></dd></dl>
+
+<dl class="method">
+<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active">
+<tt class="descname">test_always_active</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="Permalink to this definition">¶</a></dt>
+<dd></dd></dl>
+
+<dl class="method">
+<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive">
+<tt class="descname">test_some_inactive</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="Permalink to this definition">¶</a></dt>
+<dd></dd></dl>
+
+</dd></dl>
+
 </div>
 <div class="section" id="module-hyperspy.tests.component.test_component_set_parameters">
 <span id="hyperspy-tests-component-test-component-set-parameters-module"></span><h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_set_parameters" title="Permalink to this headline">¶</a></h2>
@@ -145,6 +186,7 @@
   <ul>
 <li><a class="reference internal" href="#">hyperspy.tests.component package</a><ul>
 <li><a class="reference internal" href="#submodules">Submodules</a></li>
+<li><a class="reference internal" href="#module-hyperspy.tests.component.test_component_active_array">hyperspy.tests.component.test_component_active_array module</a></li>
 <li><a class="reference internal" href="#module-hyperspy.tests.component.test_component_set_parameters">hyperspy.tests.component.test_component_set_parameters module</a></li>
 <li><a class="reference internal" href="#module-hyperspy.tests.component">Module contents</a></li>
 </ul>
@@ -187,7 +229,7 @@
         <li class="right" >
           <a href="../np-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.7.3 documentation</a> &raquo;</li> 
+        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
