--- a/dev/api/hyperspy.tests.component.html
+++ b/dev/api/hyperspy.tests.component.html
@@ -6,15 +6,15 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     
-    <title>hyperspy.tests.component package &mdash; HyperSpy 0.8+dev documentation</title>
+    <title>hyperspy.tests.component package &mdash; HyperSpy 0.8.x+dev documentation</title>
     
-    <link rel="stylesheet" href="../_static/default.css" type="text/css" />
+    <link rel="stylesheet" href="../_static/classic.css" type="text/css" />
     <link rel="stylesheet" href="../_static/pygments.css" type="text/css" />
     
     <script type="text/javascript">
       var DOCUMENTATION_OPTIONS = {
         URL_ROOT:    '../',
-        VERSION:     '0.8+dev',
+        VERSION:     '0.8.x+dev',
         COLLAPSE_INDEX: false,
         FILE_SUFFIX: '.html',
         HAS_SOURCE:  true
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="../_static/copybutton.js"></script>
     <script type="text/javascript" src="../_static/sidebar.js"></script>
     <link rel="shortcut icon" href="../_static/hyperspy_logo.ico"/>
-    <link rel="top" title="HyperSpy 0.8+dev documentation" href="../index.html" />
+    <link rel="top" title="HyperSpy 0.8.x+dev documentation" href="../index.html" />
  
 <script type="text/javascript">
 
@@ -53,10 +53,7 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="right" >
-          <a href="../np-modindex.html" title="Python Module Index"
-             >modules</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.x+dev documentation</a> &raquo;</li> 
       </ul>
     </div>  
 
@@ -74,7 +71,7 @@
 <span id="hyperspy-tests-component-test-component-active-array-module"></span><h2>hyperspy.tests.component.test_component_active_array module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_active_array" title="Permalink to this headline">¶</a></h2>
 <dl class="class">
 <dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals">
-<em class="property">class </em><tt class="descclassname">hyperspy.tests.component.test_component_active_array.</tt><tt class="descname">TestParametersAsSignals</tt><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals" title="Permalink to this definition">¶</a></dt>
+<em class="property">class </em><code class="descclassname">hyperspy.tests.component.test_component_active_array.</code><code class="descname">TestParametersAsSignals</code><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals" title="Permalink to this definition">¶</a></dt>
 <dd><p class="rubric">Methods</p>
 <table border="1" class="longtable docutils">
 <colgroup>
@@ -82,30 +79,38 @@
 <col width="90%" />
 </colgroup>
 <tbody valign="top">
-<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp"><tt class="xref py py-obj docutils literal"><span class="pre">setUp</span></tt></a>()</td>
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp"><code class="xref py py-obj docutils literal"><span class="pre">setUp</span></code></a>()</td>
 <td></td>
 </tr>
-<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active"><tt class="xref py py-obj docutils literal"><span class="pre">test_always_active</span></tt></a>()</td>
+<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active"><code class="xref py py-obj docutils literal"><span class="pre">test_always_active</span></code></a>()</td>
 <td></td>
 </tr>
-<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive"><tt class="xref py py-obj docutils literal"><span class="pre">test_some_inactive</span></tt></a>()</td>
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive"><code class="xref py py-obj docutils literal"><span class="pre">test_some_inactive</span></code></a>()</td>
+<td></td>
+</tr>
+<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_toggle_array" title="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_toggle_array"><code class="xref py py-obj docutils literal"><span class="pre">test_toggle_array</span></code></a>()</td>
 <td></td>
 </tr>
 </tbody>
 </table>
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp">
-<tt class="descname">setUp</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="Permalink to this definition">¶</a></dt>
+<code class="descname">setUp</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active">
-<tt class="descname">test_always_active</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="Permalink to this definition">¶</a></dt>
+<code class="descname">test_always_active</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive">
-<tt class="descname">test_some_inactive</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="Permalink to this definition">¶</a></dt>
+<code class="descname">test_some_inactive</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="Permalink to this definition">¶</a></dt>
+<dd></dd></dl>
+
+<dl class="method">
+<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_toggle_array">
+<code class="descname">test_toggle_array</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_toggle_array" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 </dd></dl>
@@ -115,7 +120,7 @@
 <span id="hyperspy-tests-component-test-component-set-parameters-module"></span><h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_set_parameters" title="Permalink to this headline">¶</a></h2>
 <dl class="class">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters">
-<em class="property">class </em><tt class="descclassname">hyperspy.tests.component.test_component_set_parameters.</tt><tt class="descname">TestSetParameters</tt><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters" title="Permalink to this definition">¶</a></dt>
+<em class="property">class </em><code class="descclassname">hyperspy.tests.component.test_component_set_parameters.</code><code class="descname">TestSetParameters</code><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters" title="Permalink to this definition">¶</a></dt>
 <dd><p class="rubric">Methods</p>
 <table border="1" class="longtable docutils">
 <colgroup>
@@ -123,46 +128,46 @@
 <col width="90%" />
 </colgroup>
 <tbody valign="top">
-<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp"><tt class="xref py py-obj docutils literal"><span class="pre">setUp</span></tt></a>()</td>
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp"><code class="xref py py-obj docutils literal"><span class="pre">setUp</span></code></a>()</td>
 <td></td>
 </tr>
-<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1"><tt class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_free1</span></tt></a>()</td>
+<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1"><code class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_free1</span></code></a>()</td>
 <td></td>
 </tr>
-<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2"><tt class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_free2</span></tt></a>()</td>
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2"><code class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_free2</span></code></a>()</td>
 <td></td>
 </tr>
-<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1"><tt class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_not_free1</span></tt></a>()</td>
+<tr class="row-even"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1"><code class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_not_free1</span></code></a>()</td>
 <td></td>
 </tr>
-<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2"><tt class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_not_free2</span></tt></a>()</td>
+<tr class="row-odd"><td><a class="reference internal" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2" title="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2"><code class="xref py py-obj docutils literal"><span class="pre">test_set_parameters_not_free2</span></code></a>()</td>
 <td></td>
 </tr>
 </tbody>
 </table>
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp">
-<tt class="descname">setUp</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp" title="Permalink to this definition">¶</a></dt>
+<code class="descname">setUp</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1">
-<tt class="descname">test_set_parameters_free1</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1" title="Permalink to this definition">¶</a></dt>
+<code class="descname">test_set_parameters_free1</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2">
-<tt class="descname">test_set_parameters_free2</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2" title="Permalink to this definition">¶</a></dt>
+<code class="descname">test_set_parameters_free2</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1">
-<tt class="descname">test_set_parameters_not_free1</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1" title="Permalink to this definition">¶</a></dt>
+<code class="descname">test_set_parameters_not_free1</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 <dl class="method">
 <dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2">
-<tt class="descname">test_set_parameters_not_free2</tt><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2" title="Permalink to this definition">¶</a></dt>
+<code class="descname">test_set_parameters_not_free2</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2" title="Permalink to this definition">¶</a></dt>
 <dd></dd></dl>
 
 </dd></dl>
@@ -226,15 +231,12 @@
         <li class="right" >
           <a href="../py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="right" >
-          <a href="../np-modindex.html" title="Python Module Index"
-             >modules</a> |</li>
-        <li><a href="../index.html">HyperSpy 0.8+dev documentation</a> &raquo;</li> 
+        <li class="nav-item nav-item-0"><a href="../index.html">HyperSpy 0.8.x+dev documentation</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2012, The HyperSpy development team.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3a0.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3.1.
     </div>
   </body>
 </html>
