--- a/current/api/hyperspy.tests.component.html
+++ b/current/api/hyperspy.tests.component.html
@@ -8,7 +8,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>hyperspy.tests.component package &mdash; HyperSpy 0.8.3 documentation</title>
+  <title>hyperspy.tests.component package &mdash; HyperSpy 0.8.4 documentation</title>
   
 
   
@@ -32,7 +32,7 @@
   
 
   
-    <link rel="top" title="HyperSpy 0.8.3 documentation" href="../index.html"/>
+    <link rel="top" title="HyperSpy 0.8.4 documentation" href="../index.html"/>
  
 <script type="text/javascript">
 
@@ -78,7 +78,7 @@
             
             
               <div class="version">
-                0.8.3
+                0.8.4
               </div>
             
           
@@ -152,66 +152,11 @@
 <div class="section" id="submodules">
 <h2>Submodules<a class="headerlink" href="#submodules" title="Permalink to this headline">¶</a></h2>
 </div>
-<div class="section" id="module-hyperspy.tests.component.test_component_active_array">
-<span id="hyperspy-tests-component-test-component-active-array-module"></span><h2>hyperspy.tests.component.test_component_active_array module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_active_array" title="Permalink to this headline">¶</a></h2>
-<dl class="class">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals">
-<em class="property">class </em><code class="descclassname">hyperspy.tests.component.test_component_active_array.</code><code class="descname">TestParametersAsSignals</code><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals" title="Permalink to this definition">¶</a></dt>
-<dd><dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp">
-<code class="descname">setUp</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.setUp" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active">
-<code class="descname">test_always_active</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_always_active" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive">
-<code class="descname">test_some_inactive</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_some_inactive" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_toggle_array">
-<code class="descname">test_toggle_array</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_active_array.TestParametersAsSignals.test_toggle_array" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-</dd></dl>
-
+<div class="section" id="hyperspy-tests-component-test-component-active-array-module">
+<h2>hyperspy.tests.component.test_component_active_array module<a class="headerlink" href="#hyperspy-tests-component-test-component-active-array-module" title="Permalink to this headline">¶</a></h2>
 </div>
-<div class="section" id="module-hyperspy.tests.component.test_component_set_parameters">
-<span id="hyperspy-tests-component-test-component-set-parameters-module"></span><h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#module-hyperspy.tests.component.test_component_set_parameters" title="Permalink to this headline">¶</a></h2>
-<dl class="class">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters">
-<em class="property">class </em><code class="descclassname">hyperspy.tests.component.test_component_set_parameters.</code><code class="descname">TestSetParameters</code><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters" title="Permalink to this definition">¶</a></dt>
-<dd><dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp">
-<code class="descname">setUp</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.setUp" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1">
-<code class="descname">test_set_parameters_free1</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free1" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2">
-<code class="descname">test_set_parameters_free2</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_free2" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1">
-<code class="descname">test_set_parameters_not_free1</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free1" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-<dl class="method">
-<dt id="hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2">
-<code class="descname">test_set_parameters_not_free2</code><span class="sig-paren">(</span><span class="sig-paren">)</span><a class="headerlink" href="#hyperspy.tests.component.test_component_set_parameters.TestSetParameters.test_set_parameters_not_free2" title="Permalink to this definition">¶</a></dt>
-<dd></dd></dl>
-
-</dd></dl>
-
+<div class="section" id="hyperspy-tests-component-test-component-set-parameters-module">
+<h2>hyperspy.tests.component.test_component_set_parameters module<a class="headerlink" href="#hyperspy-tests-component-test-component-set-parameters-module" title="Permalink to this headline">¶</a></h2>
 </div>
 <div class="section" id="module-hyperspy.tests.component">
 <span id="module-contents"></span><h2>Module contents<a class="headerlink" href="#module-hyperspy.tests.component" title="Permalink to this headline">¶</a></h2>
@@ -250,7 +195,7 @@
     <script type="text/javascript">
         var DOCUMENTATION_OPTIONS = {
             URL_ROOT:'../',
-            VERSION:'0.8.3',
+            VERSION:'0.8.4',
             COLLAPSE_INDEX:false,
             FILE_SUFFIX:'.html',
             HAS_SOURCE:  true
